Adjusting css in attempt to solve android spacing

--- a/main.css
+++ b/main.css
@@ -2,25 +2,26 @@
 
 body {
     background-color: #5F4D93;
+    color: white;
     font-family: "Source Sans Pro", Helvetica, sans-serif;
 }
 
 h1 {
-    color: white;
     font-weight: 300;
     letter-spacing: -0.025em;
     font-size: 3.25em;
     margin: 0 0 0.25em 0;
 }
 
-a {
-    border-bottom: dotted 1px;
-    color: rgba(255, 255, 255, 0.8);
+a, a:visited {
+    border-bottom: dotted 2px;
+    color: inherit;
+    opacity: 0.8;
     text-decoration: none;
 }
 
 a:hover {
-    color: white;
+    opacity: 1;
 }
 
 .hidden {
@@ -28,13 +29,13 @@ a:hover {
 }
 
 .welcome {
-    color: rgba(255, 255, 255, 0.7);
+    opacity: 0.8;
     letter-spacing: -0.025em;
     font-size: 1.25em;
 }
 
 .welcome .emoji {
-    color: white;
+    opacity: 1;
 }
 
 .load-first {
@@ -49,5 +50,4 @@ a:hover {
 
 img {
     border: 10px solid white;
-    margin-bottom: 10px;
 }
